# pmilter

./: .clang-format  .gitignore  .travis.yml  LICENSE  Makefile  Makefile.am  README.md  TODO  conf.h  configure.in  docker-compose.yml  main.c  pmilter.c  pmilter.conf
handler/: body.rb  example.rb  example_envelope.rb  example_eom.rb  example_helo.rb  header.rb  helo.rb  mail_from.rb  master_exit.rb  postconfig.rb  rcpt_to.rb
milter-test-sample/: Gemfile  README.md
milter-test-sample/lib/: milter-transfer.rb
milter-test-sample/test/: run-test.rb
misc/: apply-clang-format  update-subtree
misc/dockerfiles/: Dockerfile
src/: pmilter.c  pmilter.h  pmilter_config.c  pmilter_config.h  pmilter_init.c  pmilter_log.c  pmilter_log.h  pmilter_mruby_core.c  pmilter_mruby_session.c  pmilter_utils.c  pmilter_utils.h
src/icu/as_is/: bomlist.txt
src/icu/source/: Makefile  config.status  icudefs.mk
src/icu/source/common/: Makefile
src/icu/source/config/: Makefile.inc  icu-config  icu-config.1  icu.pc  icucross.mk  pkgdata.inc  pkgdataMakefile
src/icu/source/data/: Makefile  pkgdataMakefile
src/icu/source/extra/: Makefile
src/icu/source/i18n/: Makefile
src/icu/source/io/: Makefile
src/icu/source/layout/: Makefile
src/icu/source/layoutex/: Makefile
src/icu/source/lib/: libicui18n.so.50.1  libicule.so.50  libicutu.so.50  libicutu.so.50.1  libicuuc.so.50
src/libmilter/: COPYING  README  conf.h  libmilter.h  listener.c  main.c  worker.c
src/libtoml/: CMakeLists.txt
test/test/: test-milter-transfer.rb
test/test/fixtures/: emergency.eml  no-emergency.eml
(+54 files in other folders)
